--- a/als-dan.html
+++ b/als-dan.html
@@ -175,7 +175,7 @@
                     Als ik een uitschuiver maak dan...
                 </div>
                 <div class="scenario-content">
-                    <textarea class="textarea-field" placeholder="Beschrijf wat u gaat doen als u een eenmalige uitschuiver maakt. Wie belt u? Hoe voorkomt u verdere schade? Hoe keert u terug naar uw herstel?"></textarea>
+                    <textarea class="textarea-field" placeholder=""></textarea>
                 </div>
             </div>
             
@@ -185,7 +185,7 @@
                     Als ik blijf gebruiken dan...
                 </div>
                 <div class="scenario-content">
-                    <textarea class="textarea-field" placeholder="Beschrijf wat u gaat doen als u blijft gebruiken en in een volledig herval terechtkomt. Welke hulp schakelt u in? Welk vangnet activeert u? Hoe herstelt u uw soberheid?"></textarea>
+                    <textarea class="textarea-field" placeholder=""></textarea>
                 </div>
             </div>
             
